Development history / change log, please read from bottom up

Version 3.2.9 - yy xxx 2016
+++++ important update Java Runtime Version prerequisite to 1.8 +++++
+++++ important update Java 32 Bit -Xmx1024m, 64 Bit -Xmx3096m  +++++
- fix early rounding while importing CSV data
SM GPS-Logger 1/2 
	- update configuration support firmware 1.16
	- enhance load/save setting path algorithm
SM UniLog 2 
	- minor code update configuration support FW 1.12
	- enhance load/save setting path algorithm
MC3000 SkyRC
	- switch to continuous data gathering for all slots by selecting MC3000-Set
	- remove automatic program start/stop, form now gathering rely on manual start/stop of processing
	- fix continuous record to gather pausing data
Q200 SkyRC 4 channel charger 
	- support for 4 individual batteries added by Q200
	- support for 4 synchronized batteries added by Q200-Set

Version 3.2.8 - 05 Oct 2016
- remove the restriction re-naming compressed OSD-Files
- exchange the default value of data file path to user.home instead of using root, root causes errors for most OS due to no permissions
MC3000
	- fix setting slot programs with capabilities of FW >= 1.12
	- add device XML with TYPE_CONFIG as MC3000-Set to enable single file for all 4 slots, all batteries are a set
	- fix handling with different temperature units and unit switch
	- extend help info to describe difference between MC3000 and MC3000-Set
GPS-Logger2
	- correct maximal number of measurements using file I/O data block -52
HoTTAdapterX
	- refine log content analyze to distinguish between HoTT V2 and the normal HoTT V4 content
HoTTAdapter*
	- enable reading 'GRAUPNER SD LOG8' which contains normal HoTT V4 sensor data 
Futaba-Telemetry
	- correct error in getGPS2KMZMeasurementOrdinal used to set up the Google Earth configuration dialog
GigaLogger
	- correct error in getGPS2KMZMeasurementOrdinal used to set up the Google Earth configuration dialog
IISI-Cockpit V2