@@ -4,7 +4,8 @@ Version 3.2.9 - yy xxx 2016
 +++++ important update Java Runtime Version prerequisite to 1.8 +++++
 +++++ important update Java 32 Bit -Xmx1024m, 64 Bit -Xmx3096m  +++++
 - fix early rounding while importing CSV data
-SM GPS-Logger 1/2 
+- fix CSV import capability using relative time stamp
+SM GPS-Logger 1+2 
 	- update configuration support firmware 1.16
 	- enhance load/save setting path algorithm
 SM UniLog 2 
